docs/7.57/md/abennews-30-debugging.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 3.0](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-30.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Debugger in Release 3.0, ABENNEWS-30-DEBUGGING, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%
0A%0D%0ASuggestion for improvement:)

Debugger in Release 3.0

[1\. Debugging System Dynpros and System Programs](#!ABAP_MODIFICATION_1@1@)
[2\. Debugging ABAP Lists](#!ABAP_MODIFICATION_2@2@)
[3\. Table Editor](#!ABAP_MODIFICATION_3@3@)
[4\. Structure Expansion](#!ABAP_MODIFICATION_4@4@)
[5\. Program Overview](#!ABAP_MODIFICATION_5@5@)

Modification 1   

Debugging System Dynpros and System Programs
There are now special procedures for handling system programs and system dynpros in ABAP debugging. (System programs are programs with the status 'S' in the program properties, system dynpros are the [dynpros](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_glosry.htm "Glossary Entry") of system programs or dynpros that contain only system modules (module name SYST\-...).)
Examples for system dynpros: list dynpro, selection screen dynpro, ....
System programs and system dynpros must be debugged in system debugging. This can be accessed from anywhere in the system by choosing System → Utilities → Debugging System or by choosing Settings → System Debugging from the debugger.

Modification 2   

Debugging ABAP Lists
It is now possible to track how a list is built. As soon as a list is created, it can be displayed by pressing the Display List pushbutton in debugging. The display shows all existing lines with their formats. Exception: The only exception is the current line, which is not formatted until after [NEW-LINE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapnew-line.htm).

Modification 3   

Table Editor
In the display for internal tables, it is now also possible to change the displayed table. Rows can be changed, inserted, appended, and deleted.

Modification 4   

Structure Expansion
In the structure and table displays, structures from fields and tables passed from external programs are now expanded.

Modification 5   

Program Overview
A program overview is displayed. This lists all subroutines, functions, modules, and events belonging to the current program. The program source code can be displayed by double-clicking a line.